<?xml version="1.0"?>
<package format="3">
  <name>ports_with_generic_types</name>
  <version>0.0.0</version>
  <description>TODO: none</description>
  <maintainer email="2271612727@qq.com">Hiromichi123</maintainer>
  <license>TODO: License declaration</license>

  <depend>behaviortree_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>